Clean up game method, fix warns